# typie

./: .coderabbit.yaml  .cursorrules  .dockerignore  .envrc  .gitignore  .gitmodules  .npmrc  .prettierignore  .sops.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Gemfile  LICENSE  README  README.md  cspell.json  cspell.txt  doppler.yaml  eslint.config.js  kubeconfig  lefthook.yml  lint-staged.config.js  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  syncpack.config.cjs  syncpack.config.js  turbo.json
apps/desktop/src-tauri/: Cargo.toml  Tauri.toml  tauri.conf.json
crates/editor/: Cargo.toml  justfile  package.json  uniffi.toml
crates/editor-bindgen/: Cargo.toml
crates/editor-bindgen/src/: kotlin.rs  kotlin_iface.rs  kotlin_ios.rs  kotlin_jna.rs  lib.rs  meta.rs  objc.rs  reader.rs  swift.rs
crates/editor-clipboard/: Cargo.toml  uniffi.toml
crates/editor-clipboard/src/: lib.rs  payload.rs  slice.rs  test_doc.rs
crates/editor-codec/: Cargo.toml
crates/editor-codec-macros/: Cargo.toml
crates/editor-codec-macros/src/: lib.rs
crates/editor-codec-macros/tests/: compile_pass.rs  enums.rs  schema_lock.rs  structs.rs
crates/editor-codec/src/: bundle.rs  consolidate.rs  convert.rs  ctx.rs  durable.rs  envelope.rs  error.rs  framing.rs  lib.rs  primitives.rs  registry.rs  schema.rs  varint.rs
crates/editor-codec/tests/: consolidate.rs  consolidate_dedup.rs  golden.rs  oracle.rs  perf_encode.rs  robustness.rs  schema_lock.rs  vnext.rs
crates/editor-commands/: Cargo.toml  uniffi.toml
crates/editor-commands/src/: compose.rs  error.rs  lib.rs  test_utils.rs  tests.rs
crates/editor-common/: Cargo.toml  uniffi.toml
crates/editor-common/src/: color.rs  content_tree.rs  error.rs  ffi.rs  geometry.rs  history.rs  lib.rs  movement.rs  order_interval_tree.rs  segmentation.rs  str.rs  style.rs  sum_tree.rs  surface_layer.rs  time.rs  tri.rs  zstd.rs
crates/editor-core/: Cargo.toml  uniffi.toml
crates/editor-core/src/: block_state.rs  dnd.rs  editor.rs  error.rs  event.rs  font.rs  history.rs  ime.rs  interaction.rs  lib.rs  message.rs  search.rs  state_field.rs  style_state.rs  test_utils.rs  text_replacement_tests.rs  tracked_range.rs
crates/editor-crdt/: Cargo.toml  uniffi.toml
crates/editor-crdt/src/: changeset.rs  dot.rs  dot_map.rs  error.rs  lib.rs  lwwreg.rs  op_graph.rs  oplog.rs  ormap.rs  orset.rs  rga.rs  sync.rs  sync_simulator.rs  test_utils.rs  text.rs  to_plain.rs
crates/editor-ffi/: .gitignore  Cargo.toml  justfile  package.json  uniffi.toml
crates/editor-ffi/pkg/: editor_ffi.d.ts  editor_ffi_bg.wasm.d.ts
crates/editor-ffi/scripts/: wbg.rs
crates/editor-ffi/src/: anchors.rs  backend.rs  convert.rs  doc_builder.rs  editor.rs  error.rs  graph.rs  host.rs  ingest.rs  lib.rs  prelude.rs  present.rs  root.rs  server.rs  types.rs
crates/editor-introspection/: Cargo.toml  uniffi.toml
crates/editor-introspection/src/: inspect_state.rs  inspect_state_as_macro.rs  labeler.rs  lib.rs
crates/editor-macros/: Cargo.toml
crates/editor-macros/src/: lib.rs
crates/editor-macros/tests/: doc_basic.rs  modifier_state.rs  node_attr.rs  state_basic.rs
crates/editor-model/: Cargo.toml  uniffi.toml
crates/editor-model/benches/: wire_size.rs
crates/editor-model/src/: alias.rs  alignment.rs  attr.rs  canonical.rs  doc.rs  doc_op.rs  doc_text_store.rs  document_attrs.rs  edit_op.rs  entry.rs  error.rs  ffi.rs  fragment.rs  id.rs  lib.rs  marker.rs  modifier.rs  node_attr.rs  node_lww.rs  node_ref.rs  object.rs  order.rs  plain.rs  projection.rs  stable_position_remap.rs  style.rs  style_log.rs  subtree.rs  test_utils.rs  text_entry_store.rs  text_index.rs  text_view.rs  validate.rs
crates/editor-model/tests/: context_expr_tests.rs  wire_proptest.rs
crates/editor-renderer/: Cargo.toml  build.rs  icons.toml  uniffi.toml
crates/editor-renderer/src/: damage.rs  diff.rs  display_list.rs  error.rs  icon_data.rs  icons.rs  lib.rs  renderer.rs  sink.rs  theme.rs  theme_data.rs  translate.rs  types.rs
crates/editor-renderer/tests/: icon_geometry.rs
crates/editor-resource/: Cargo.toml  build.rs  uniffi.toml
crates/editor-resource/assets/: generate_placeholder.py
crates/editor-resource/src/: brush.rs  character_count.rs  error.rs  lib.rs  resource.rs  segmentation.rs  text_replacement.rs  theme.rs  theme_data.rs  zstd.rs
crates/editor-schema/: Cargo.toml  uniffi.toml
crates/editor-schema/src/: content.rs  context.rs  ext.rs  lib.rs  spec.rs
crates/editor-schema/tests/: context_expr_tests.rs
crates/editor-server/: Cargo.toml
crates/editor-server/assets/: FIXTURES.sha256
crates/editor-server/src/: error.rs  lib.rs
crates/editor-state/: Cargo.toml  uniffi.toml
crates/editor-state/proptest-regressions/: corpus.txt  projected_state.txt  undo.txt
crates/editor-state/src/: affinity.rs  apply.rs  bind.rs  builders.rs  carry.rs  cell_selection.rs  classify.rs  composition.rs  continuation.rs  corpus.rs  cursor_position.rs  edit_commands.rs  error.rs  flat.rs  fragment_builder.rs  gap_cursor.rs  layout_dirty.rs  lib.rs  load_builder.rs  modifier_resolution.rs  modifier_span.rs  modifier_state.rs  normalize.rs  paragraph_break.rs  pending_modifier.rs  pending_style.rs  position.rs  projected_state.rs  prose.rs  replacement.rs  resolved_position.rs  resolved_selection.rs  selection.rs  selection_expansion.rs  stable_position.rs  stable_selection.rs  state.rs  test_utils.rs  to_plain.rs  traversal.rs  (+1 more)
crates/editor-state/tests/: error_paths.rs  multi_replica_convergence.rs
crates/editor-transaction/: Cargo.toml  uniffi.toml
crates/editor-transaction/proptest-regressions/: transform.txt
crates/editor-transaction/src/: compact.rs  dissolve.rs  effect.rs  error.rs  fulfill.rs  (+11 more)
crates/editor-view/: Cargo.toml  uniffi.toml
crates/fondue/: Cargo.toml  build.rs  package.json
crates/glyphr/: Cargo.toml  package.json
crates/vermuda/: Cargo.toml  config.toml  config.toml.example  justfile
crates/workspace-hack/: Cargo.toml
legacy/editor/: Cargo.toml  justfile  package.json
lib/glyphr/: Cargo.toml
(+6075 files in other folders)
