[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"

[workspace.dependencies]
android_logger = "0.15"
base62 = "2"
base64 = "0.22"
bitcode = "0.6"
rapidhash = "4"
bytecount = { version = "0.6", features = ["runtime-dispatch-simd"] }
cfg-if = "1"
console_error_panic_hook = { version = "0.1" }
console_log = "1"
enum-map = "2"
env_filter = "0.1"
env_logger = "0.11"
fancy-regex = "0.18"
fontique = { version = "0.10", default-features = false }
getrandom = { version = "0.4", features = ["wasm_js"] }
csscolorparser = "0.8"
cssparser = "0.37"
ego-tree = "0.11"
hashbrown = "0.17"
heck = "0.5"
hex = "0.4"
html5ever = "0.39"
scraper = "0.27"
selectors = "0.38"
itertools = "0.14"
icu_properties = { version = "2", default-features = false, features = [
  "serde",
] }
icu_provider = { version = "2", default-features = false, features = [
  "serde",
  "sync",
] }
icu_provider_blob = "2"
icu_segmenter = { version = "2", default-features = false }
imbl = "7"
kurbo = "0.13"
log = "0.4"
markup5ever_rcdom = "0.39"
objc2 = "0.6"
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes"] }
objc2-metal = { version = "0.3", features = [
  "MTLTexture",
  "MTLDrawable",
  "MTLTypes",
] }
object = { version = "0.39", default-features = false, features = ["read"] }
parley = { version = "0.10", default-features = false, features = ["std"] }
peniko = "0.6"
phf = "0.13"
phf_codegen = "0.13"
proc-macro2 = "1"
proptest = "1"
quote = "1"
raw-window-handle = "0.6"
resize = { version = "0.8", default-features = false }
ruzstd = "0.8"
rstar = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
serde_bytes = "0.11"
skrifa = "0.43"
smallvec = { version = "1", features = ["serde"] }
strum = { version = "0.28", features = ["derive"] }
syn = { version = "2", features = ["full", "extra-traits"] }
thiserror = "2"
toml = "1.1"
tsify = { version = "0.5", features = ["js"] }
unicode-segmentation = "1"
uniffi = "0.31"
vello = "0.9"
wasm-bindgen = "0.2"
wasm-bindgen-cli = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
web-time = "1"
wgpu = "29"
write-fonts = "0.49"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zeno = "0.3"
zune-png = "0.5"

[profile.dev-uniffi]
inherits = "dev"
panic = "unwind"

[profile.dev-wasm]
inherits = "dev"
panic = "abort"

[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.release-uniffi]
inherits = "release"
panic = "unwind"

[profile.release-wasm]
inherits = "release"
panic = "abort"

[patch.crates-io]
bytecount = { git = "https://github.com/devunt/bytecount.git", branch = "master" }
tsify = { git = "https://github.com/madonoharu/tsify.git", branch = "main" }
