[package]
name = "editor-bindgen"
version.workspace = true
edition.workspace = true

[features]
default = []
bin = ["dep:object", "dep:heck", "dep:syn", "dep:quote", "dep:uniffi", "dep:wasm-bindgen-cli", "dep:env_logger"]

[dependencies]
bitcode.workspace = true
heck = { workspace = true, optional = true }
object = { workspace = true, optional = true }
syn = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
uniffi = { workspace = true, features = ["cli"], optional = true }
wasm-bindgen-cli = { workspace = true, optional = true }

[[bin]]
name = "editor-bindgen-kotlin"
path = "src/bin/editor-bindgen-kotlin.rs"
required-features = ["bin"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["bin"]

[[bin]]
name = "uniffi-bindgen-swift"
path = "src/bin/uniffi-bindgen-swift.rs"
required-features = ["bin"]

[[bin]]
name = "wasm-bindgen-cli"
path = "src/bin/wasm-bindgen.rs"
required-features = ["bin"]

[[bin]]
name = "editor-bindgen-swift"
path = "src/bin/editor-bindgen-swift.rs"
required-features = ["bin"]

[[bin]]
name = "editor-bindgen-js"
path = "src/bin/editor-bindgen-js.rs"
required-features = ["bin"]
