[package]
name = "editor-codec-macros"
version.workspace = true
edition.workspace = true

[lib]
doctest = false
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
editor-codec = { path = "../editor-codec" }
editor-crdt = { path = "../editor-crdt" }
trybuild = { workspace = true }
