[package]
name = "editor-common"
version.workspace = true
edition.workspace = true

[features]
test-utils = ["icu_segmenter/compiled_data", "icu_segmenter/auto"]

[dependencies]
editor-macros = { path = "../editor-macros" }
bytecount.workspace = true
icu_provider.workspace = true
icu_provider_blob.workspace = true
icu_segmenter = { workspace = true, features = ["serde"] }
log.workspace = true
ruzstd.workspace = true
serde.workspace = true
thiserror.workspace = true
web-time.workspace = true
