[package]
name = "editor-common"
version.workspace = true
edition.workspace = true

[features]
uniffi = ["dep:uniffi"]
wasm = ["dep:tsify", "dep:wasm-bindgen"]

[dependencies]
editor-macros = { path = "../editor-macros" }
bytecount.workspace = true
log.workspace = true
serde.workspace = true
tsify = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
web-time.workspace = true
