[package]
name = "editor-core"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[features]
test-utils = ["editor-view/test-utils", "editor-resource/test-utils"]
uniffi = [
  "dep:uniffi",
  "editor-clipboard/uniffi",
  "editor-commands/uniffi",
  "editor-common/uniffi",
  "editor-crdt/uniffi",
  "editor-model/uniffi",
  "editor-renderer/uniffi",
  "editor-resource/uniffi",
  "editor-state/uniffi",
  "editor-transaction/uniffi",
  "editor-view/uniffi",
]
wasm = [
  "dep:tsify",
  "dep:wasm-bindgen",
  "editor-clipboard/wasm",
  "editor-commands/wasm",
  "editor-common/wasm",
  "editor-crdt/wasm",
  "editor-model/wasm",
  "editor-renderer/wasm",
  "editor-resource/wasm",
  "editor-state/wasm",
  "editor-transaction/wasm",
  "editor-view/wasm",
]

[dependencies]
editor-clipboard = { path = "../editor-clipboard" }
editor-commands = { path = "../editor-commands" }
editor-common = { path = "../editor-common" }
editor-crdt = { path = "../editor-crdt" }
editor-macros = { path = "../editor-macros" }
editor-model = { path = "../editor-model" }
editor-renderer = { path = "../editor-renderer" }
editor-resource = { path = "../editor-resource" }
editor-state = { path = "../editor-state" }
editor-transaction = { path = "../editor-transaction" }
editor-view = { path = "../editor-view" }
enum-map.workspace = true
itertools.workspace = true
hashbrown.workspace = true
log.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
tsify = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
editor-model = { path = "../editor-model", features = ["test-utils"] }
editor-state = { path = "../editor-state", features = ["test-utils"] }
editor-view = { path = "../editor-view", features = ["test-utils"] }
proptest = { workspace = true }
serde_json.workspace = true
