[package]
name = "editor-crdt"
version.workspace = true
edition.workspace = true

[features]
uniffi = ["dep:uniffi"]
wasm = ["dep:tsify", "dep:wasm-bindgen"]

[dependencies]
editor-macros = { path = "../editor-macros" }
imbl = { workspace = true, features = ["serde"] }
serde.workspace = true
thiserror.workspace = true
tsify = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
