[package]
name = "editor-crdt"
version.workspace = true
edition.workspace = true

[features]
uniffi = ["dep:uniffi"]
wasm = ["dep:tsify", "dep:wasm-bindgen"]

[dependencies]
editor-macros = { path = "../editor-macros" }
getrandom.workspace = true
hashbrown = { workspace = true }
imbl = { workspace = true, features = ["serde"] }
ruzstd.workspace = true
serde.workspace = true
thiserror.workspace = true
tsify = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
