[package]
name = "editor-crdt"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[features]
uniffi = ["dep:uniffi"]
wasm = ["dep:tsify", "dep:wasm-bindgen"]

[dependencies]
editor-common = { path = "../editor-common" }
editor-macros = { path = "../editor-macros" }
base62.workspace = true
getrandom.workspace = true
hashbrown = { workspace = true }
imbl = { workspace = true, features = ["serde"] }
ruzstd.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tsify = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
