[package]
name = "editor-ffi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = []
uniffi = [
  "dep:uniffi",
  "dep:serde",
  "dep:android_logger",
  "dep:env_filter",
  "dep:env_logger",
  "editor-common/uniffi",
  "editor-core/uniffi",
  "editor-introspection/uniffi",
  "editor-model/uniffi",
  "editor-renderer/uniffi",
  "editor-resource/uniffi",
  "editor-state/uniffi",
  "editor-transaction/uniffi",
  "editor-view/uniffi",
  "dep:wgpu",
  "dep:raw-window-handle",
]
wasm = [
  "dep:console_error_panic_hook",
  "dep:console_log",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:serde-wasm-bindgen",
  "dep:serde",
  "dep:tsify",
  "editor-common/wasm",
  "editor-core/wasm",
  "editor-introspection/wasm",
  "editor-model/wasm",
  "editor-renderer/wasm",
  "editor-resource/wasm",
  "editor-state/wasm",
  "editor-transaction/wasm",
  "editor-view/wasm",
]
wasm-browser = ["wasm", "dep:web-sys", "dep:wgpu"]
wasm-server = ["wasm", "dep:editor-server", "editor-server/wasm"]

[dependencies]
editor-common = { path = "../editor-common" }
editor-core = { path = "../editor-core" }
editor-introspection = { path = "../editor-introspection" }
editor-macros = { path = "../editor-macros" }
editor-model = { path = "../editor-model" }
editor-renderer = { path = "../editor-renderer" }
editor-resource = { path = "../editor-resource" }
editor-server = { path = "../editor-server", optional = true }
editor-state = { path = "../editor-state" }
editor-transaction = { path = "../editor-transaction" }
editor-view = { path = "../editor-view" }
android_logger = { workspace = true, optional = true }
cfg-if.workspace = true
console_error_panic_hook = { workspace = true, optional = true }
console_log = { workspace = true, optional = true }
env_filter = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
hashbrown.workspace = true
log.workspace = true
raw-window-handle = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
serde_json.workspace = true
thiserror.workspace = true
tsify = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = [
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
] }
wgpu = { workspace = true, optional = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
objc2.workspace = true
objc2-core-foundation.workspace = true
objc2-metal.workspace = true
