[package]
name = "editor-ffi"
version.workspace = true
edition.workspace = true

[lib]
doctest = false
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = []
elemid_serde = ["editor-model/elemid_serde"]
uniffi = [
  "dep:uniffi",
  "dep:android_logger",
  "dep:env_filter",
  "dep:env_logger",
  "editor-clipboard/uniffi",
  "editor-common/uniffi",
  "editor-core/uniffi",
  "editor-crdt/uniffi",
  "editor-introspection/uniffi",
  "editor-model/uniffi",
  "editor-renderer/uniffi",
  "editor-resource/uniffi",
  "editor-state/uniffi",
  "editor-transaction/uniffi",
  "editor-view/uniffi",
]
wasm = [
  "dep:console_error_panic_hook",
  "dep:console_log",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:serde-wasm-bindgen",
  "dep:tsify",
  "editor-clipboard/wasm",
  "editor-common/wasm",
  "editor-core/wasm",
  "editor-crdt/wasm",
  "editor-introspection/wasm",
  "editor-model/wasm",
  "editor-renderer/wasm",
  "editor-resource/wasm",
  "editor-state/wasm",
  "editor-transaction/wasm",
  "editor-view/wasm",
]
wasm-browser = ["wasm", "dep:web-sys"]
wasm-server = ["wasm", "dep:editor-server", "editor-server/wasm"]

[dependencies]
editor-clipboard = { path = "../editor-clipboard" }
editor-common = { path = "../editor-common" }
editor-core = { path = "../editor-core" }
editor-crdt = { path = "../editor-crdt" }
editor-introspection = { path = "../editor-introspection" }
editor-macros = { path = "../editor-macros" }
editor-model = { path = "../editor-model" }
editor-renderer = { path = "../editor-renderer" }
editor-resource = { path = "../editor-resource" }
editor-server = { path = "../editor-server", optional = true }
editor-state = { path = "../editor-state" }
editor-transaction = { path = "../editor-transaction" }
editor-view = { path = "../editor-view" }
android_logger = { workspace = true, optional = true }
cfg-if.workspace = true
console_error_panic_hook = { workspace = true, optional = true }
console_log = { workspace = true, optional = true }
env_filter = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
hashbrown.workspace = true
log.workspace = true
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true, optional = true }
serde_bytes.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tsify = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = [
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[target.'cfg(target_vendor = "apple")'.dependencies]
objc2.workspace = true
objc2-core-foundation.workspace = true
objc2-metal.workspace = true

[dev-dependencies]
editor-core = { path = "../editor-core", features = ["test-utils"] }
editor-resource = { path = "../editor-resource", features = ["test-utils"] }
editor-state = { path = "../editor-state", features = ["test-utils"] }
