[package]
name = "editor-introspection"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[features]
uniffi = ["dep:uniffi", "editor-model/uniffi", "editor-state/uniffi"]
wasm = ["dep:tsify", "dep:wasm-bindgen", "editor-model/wasm", "editor-state/wasm"]

[dependencies]
editor-crdt = { path = "../editor-crdt" }
editor-macros = { path = "../editor-macros" }
editor-model = { path = "../editor-model", features = ["test-utils"] }
editor-state = { path = "../editor-state" }
hashbrown.workspace = true
serde.workspace = true
tsify = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
editor-macros = { path = "../editor-macros" }
editor-state = { path = "../editor-state", features = ["test-utils"] }
