[package]
name = "editor-macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
editor-bindgen = { path = "../editor-bindgen", default-features = false }
bitcode.workspace = true
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
editor-model = { path = "../editor-model", features = ["test-utils"] }
editor-state = { path = "../editor-state" }
imbl.workspace = true
smallvec.workspace = true
