[package]
name = "editor-macros"
version.workspace = true
edition.workspace = true

[lib]
doctest = false
proc-macro = true

[dependencies]
editor-bindgen = { path = "../editor-bindgen", default-features = false }
bitcode.workspace = true
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
editor-common = { path = "../editor-common" }
editor-crdt = { path = "../editor-crdt" }
editor-model = { path = "../editor-model", features = ["test-utils"] }
editor-state = { path = "../editor-state", features = ["test-utils"] }
imbl.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("wasm", "uniffi"))'] }
