[package]
name = "editor-model"
version.workspace = true
edition.workspace = true
autobenches = false

[[example]]
name = "wire_size_bench"
path = "benches/wire_size.rs"

[features]
test-utils = []
uniffi = ["dep:uniffi", "editor-common/uniffi"]
wasm = ["dep:tsify", "dep:wasm-bindgen", "editor-common/wasm"]

[dependencies]
editor-common = { path = "../editor-common" }
editor-crdt = { path = "../editor-crdt" }
editor-macros = { path = "../editor-macros" }
base62.workspace = true
enum-map.workspace = true
getrandom.workspace = true
hashbrown.workspace = true
imbl = { workspace = true, features = ["serde"] }
log.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tsify = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
