[package]
name = "editor-model"
version.workspace = true
edition.workspace = true
autobenches = false

[features]
elemid_serde = []
test-utils = []
uniffi = ["dep:uniffi", "editor-common/uniffi"]
wasm = ["dep:tsify", "dep:wasm-bindgen", "editor-common/wasm"]

[dependencies]
editor-common = { path = "../editor-common" }
editor-crdt = { path = "../editor-crdt" }
editor-macros = { path = "../editor-macros" }
base62.workspace = true
enum-map.workspace = true
getrandom.workspace = true
hashbrown.workspace = true
imbl = { workspace = true, features = ["serde"] }
log.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tsify = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
xxhash-rust = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }
