[package]
name = "editor-renderer"
version.workspace = true
edition.workspace = true

[dependencies]
editor-common = { path = "../editor-common" }
editor-macros = { path = "../editor-macros" }
editor-model = { path = "../editor-model" }
editor-resource = { path = "../editor-resource" }
editor-view = { path = "../editor-view" }
hashbrown.workspace = true
kurbo.workspace = true
log.workspace = true
peniko.workspace = true
phf = { workspace = true, features = ["macros"] }
resize = { workspace = true }
skrifa.workspace = true
serde.workspace = true
thiserror.workspace = true
vello.workspace = true
vello_cpu.workspace = true
wgpu.workspace = true
zeno.workspace = true
zune-png.workspace = true

[build-dependencies]
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde_json.workspace = true

[dev-dependencies]
editor-common = { path = "../editor-common", features = ["test-utils"] }
editor-model = { path = "../editor-model", features = ["test-utils"] }
