[package]
name = "editor-renderer"
version.workspace = true
edition.workspace = true

[features]
uniffi = [
  "dep:uniffi",
  "editor-common/uniffi",
  "editor-model/uniffi",
  "editor-resource/uniffi",
  "editor-view/uniffi",
]
wasm = [
  "dep:tsify",
  "dep:wasm-bindgen",
  "editor-common/wasm",
  "editor-model/wasm",
  "editor-resource/wasm",
  "editor-view/wasm",
]

[dependencies]
editor-common = { path = "../editor-common" }
editor-macros = { path = "../editor-macros" }
editor-model = { path = "../editor-model" }
editor-resource = { path = "../editor-resource" }
editor-view = { path = "../editor-view" }
hashbrown.workspace = true
kurbo.workspace = true
log.workspace = true
peniko.workspace = true
phf = { workspace = true, features = ["macros"] }
resize = { workspace = true }
skrifa.workspace = true
serde.workspace = true
thiserror.workspace = true
vello_cpu.workspace = true
zeno.workspace = true
zune-png.workspace = true
tsify = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[build-dependencies]
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
editor-model = { path = "../editor-model", features = ["test-utils"] }
