[package]
name = "editor-renderer"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[features]
uniffi = [
  "dep:uniffi",
  "editor-common/uniffi",
  "editor-model/uniffi",
  "editor-resource/uniffi",
  "editor-view/uniffi",
]
wasm = [
  "dep:tsify",
  "dep:wasm-bindgen",
  "editor-common/wasm",
  "editor-model/wasm",
  "editor-resource/wasm",
  "editor-view/wasm",
]

[dependencies]
editor-common = { path = "../editor-common" }
editor-macros = { path = "../editor-macros" }
editor-model = { path = "../editor-model" }
editor-resource = { path = "../editor-resource" }
editor-view = { path = "../editor-view" }
hashbrown.workspace = true
kurbo.workspace = true
log.workspace = true
phf = { workspace = true, features = ["macros"] }
resize = { workspace = true }
skrifa.workspace = true
serde.workspace = true
thiserror.workspace = true
zeno.workspace = true
zune-png.workspace = true
tsify = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[build-dependencies]
proc-macro2.workspace = true
quote.workspace = true
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
editor-crdt = { path = "../editor-crdt" }
editor-model = { path = "../editor-model", features = ["test-utils"] }
editor-resource = { path = "../editor-resource", features = ["test-utils"] }
editor-state = { path = "../editor-state", features = ["test-utils"] }
editor-view = { path = "../editor-view", features = ["test-utils"] }
