[package]
name = "editor-resource"
version.workspace = true
edition.workspace = true

[features]
test-utils = [
  "icu_properties/compiled_data",
  "icu_segmenter/auto",
  "icu_segmenter/compiled_data",
]
uniffi = ["dep:uniffi", "editor-common/uniffi"]
wasm = [
  "dep:tsify",
  "dep:wasm-bindgen",
  "editor-common/wasm",
]

[dependencies]
editor-common = { path = "../editor-common" }
editor-macros = { path = "../editor-macros" }
fancy-regex.workspace = true
fontique.workspace = true
hashbrown.workspace = true
icu_properties.workspace = true
icu_provider.workspace = true
icu_provider_blob.workspace = true
icu_segmenter = { workspace = true, features = ["serde"] }
log.workspace = true
parley.workspace = true
phf = { workspace = true, features = ["macros"] }
ruzstd.workspace = true
serde.workspace = true
skrifa.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tsify = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[build-dependencies]
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde_json.workspace = true

[dev-dependencies]
ruzstd.workspace = true
